--- a/faqs.html
+++ b/faqs.html
@@ -39,7 +39,7 @@
                 </ul>
       
                 <div class="text-end">
-                    <button type="button" class="btn btn-outline-light me-2">Inquiry now via WhatsApp</button>
+                    <button type="button" class="btn btn-outline-light me-2">WhatsApp Inquiry</button>
                     <button type="button" class="btn btn-warning">Share Now</button>
                 </div>
             </div>
@@ -66,6 +66,7 @@
         <div class="b-example-divider"></div>
             <div class="container">
                 <footer class="py-3 my-4">
+                    <!-- NAVIGATION -->
                     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                         <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
                         <li class="nav-item"><a href="services.html" class="nav-link px-2 text-muted">Services</a></li>
@@ -75,7 +76,9 @@
                         <li class="nav-item"><a href="about-us.html" class="nav-link px-2 text-muted">About-Us</a></li>
                     </ul>
 
-                    <center><img id="yt-logo-footer" src="images/tct-logo.png" alt="Yottasoft Technology" height="125"></center>
+                    <center>
+                        <img id="yt-logo-footer" src="images/tct-logo.png" alt="Yottasoft Technology" height="125">
+                    </center>
 
                     <!-- @ 2022 Company Inc. -->
                     <p class="text-center text-muted">Copyright &copy; 2021-2023 Thomas Cheapsoft Technology</p>
