--- a/faqs.html
+++ b/faqs.html
@@ -46,7 +46,7 @@
         </div>
     </header>
 
-    <br>
+    <br class="highlightNone">
 
     <div class="pageTitle_description_div">
         <center><h1 class="display-6 fw-normal">Frequently Asked Questions (FAQs)</h1></center>
@@ -58,7 +58,7 @@
         </center>    
     </div>
 
-    <br><br><br><br><br>
+    <br class="highlightNone"><br class="highlightNone"><br class="highlightNone"><br class="highlightNone"><br class="highlightNone">
 
     </body>
 
@@ -81,8 +81,10 @@
                     </center>
 
                     <!-- @ 2022 Company Inc. -->
-                    <p class="text-center text-muted">Copyright &copy; 2021-2023 Thomas Cheapsoft Technology</p>
-                    <p class="text-center">All rights reserved.</p>
+                    <p class="text-center text-muted">
+                        Copyright &copy; 2021-2025 Thomas Comonics Technology
+                        <br class="highlightNone"> All rights reserved.
+                    </p>
                 </footer>
             </div>
     </footer>
