--- a/about-us.html
+++ b/about-us.html
@@ -48,7 +48,7 @@
         </div>
     </header>
 
-    <br>
+    <br class="highlightNone">
 
     <div class="pageTitle_description_div">
         <!-- Business Information -->
@@ -64,7 +64,8 @@
                     id="tct-full-logo" 
                     alt="Thomas Cheapsoft Technology" 
                     style="margin-bottom: 18px;">
-                <h3 class="fs-5 text-muted highlightNone">
+                <h3 class="fs-5 highlightNone"
+                    style="color: #d9a21b">
                     Speedy | Reliable | Affordable 
                 </h3>
 
@@ -103,112 +104,106 @@
 
                 <p class="fs-6 text-muted">
                     Prices on e-Commerce platforms may be higher due to platform fees. 
-                    <br> Direct purchases offer lower rates by avoiding these extra costs.
+                    <br class="highlightNone"> Direct purchases offer lower rates by avoiding these extra costs.
                 </p>
 
                 <br class="highlightNone">
 
                 <!-- Shopee -->
-                <div class="eCommercePlatform">
-                    <table>
-                        <tr>
-                            <td style="padding-right: 28px;">
-                                <a href="https://shopee.com.my/tct_penang" target="_blank">
+                 <a href="https://shopee.com.my/tct_penang" target="_blank" style="text-decoration: none;">
+                    <div class="eCommercePlatform">
+                        <table>
+                            <tr>
+                                <td style="padding-right: 28px;">
                                     <img src="images/shopee-logo.png" 
                                         alt="Shopee Malaysia"
                                         title="Shopee Malaysia"
                                         height="100px"
                                         width="">
-                                </a>
-                            </td>
-                            <td>
-                                <h5 class="fs-6 text-muted">
-                                    <table>
-                                        <tr>
-                                            <td style="padding-right: 8px;">Shop Name</td>
-                                            <td width="40px">:</td>
-                                            <td>Thomas Comonics Technology (TCT)</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Username</td>
-                                            <td>:</td>
-                                            <td>tct_penang</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Followers</td>
-                                            <td>:</td>
-                                            <td>3.7k</td>
-                                        </tr>
-                                    </table>
-                                </h5>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-
+                                </td>
+                                <td>
+                                    <h5 class="fs-6 text-muted">
+                                        <table>
+                                            <tr>
+                                                <td style="padding-right: 8px;">Shop Name</td>
+                                                <td width="40px">:</td>
+                                                <td>Thomas Comonics Technology (TCT)</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Username</td>
+                                                <td>:</td>
+                                                <td>tct_penang</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Followers</td>
+                                                <td>:</td>
+                                                <td>3.7k</td>
+                                            </tr>
+                                        </table>
+                                    </h5>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                 </a>
+                
                 <br class="highlightNone">
 
                 <!-- Lazada -->
-                <div class="eCommercePlatform">
-                    <table>
-                        <tr>
-                            <td style="padding-right: 28px;">
-                                <a href="https://www.lazada.com.my/shop/tct-penang" target="_blank">
+                <a href="https://www.lazada.com.my/shop/tct-penang" target="_blank" style="text-decoration: none;">
+                    <div class="eCommercePlatform">
+                        <table>
+                            <tr>
+                                <td style="padding-right: 28px;">
                                     <img src="images/lazada-logo.png" 
                                         alt="Shopee Malaysia"
                                         title="Shopee Malaysia"
                                         height="100px"
                                         width="">
-                                </a>
-                            </td>
-                            <td>
-                                <h5 class="fs-6 text-muted">
-                                    <table>
-                                        <tr>
-                                            <td style="padding-right: 8px;">Store Name</td>
-                                            <td width="40px">:</td>
-                                            <td>Thomas Comonics Technology (TCT)</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Followers</td>
-                                            <td>:</td>
-                                            <td>10</td>
-                                        </tr>
-                                    </table>
-                                </h5>
-                            </td>
-                        </tr>
-                    </table>
-                </div>                
+                                </td>
+                                <td>
+                                    <h5 class="fs-6 text-muted">
+                                        <table>
+                                            <tr>
+                                                <td style="padding-right: 8px;">Store Name</td>
+                                                <td width="40px">:</td>
+                                                <td>Thomas Comonics Technology (TCT)</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Followers</td>
+                                                <td>:</td>
+                                                <td>10</td>
+                                            </tr>
+                                        </table>
+                                    </h5>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>         
+                </a>
             </center>
         </div>
     </div>
     </body>
 
-    <footer>
-        <div class="b-example-divider"></div>
-            <div class="container">
-                <footer class="py-3 my-4">
-                    <!-- NAVIGATION -->
-                    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                        <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
-                        <li class="nav-item"><a href="services.html" class="nav-link px-2 text-muted">Services</a></li>
-                        <li class="nav-item"><a href="products.html" class="nav-link px-2 text-muted">Products</a></li>
-                        <li class="nav-item"><a href="payment-methods.html" class="nav-link px-2 text-muted">Payment-Methods</a></li>
-                        <li class="nav-item"><a href="faqs.html" class="nav-link px-2 text-muted">FAQs</a></li>
-                        <li class="nav-item"><a href="about-us.html" class="nav-link px-2 text-muted">About-Us</a></li>
-                    </ul>
-
-                    <center>
-                        <img id="yt-logo-footer" src="images/tct-logo.png" alt="Yottasoft Technology" height="125">
-                    </center>
-
-                    <!-- @ 2022 Company Inc. -->
-                    <p class="text-center text-muted">
-                        Copyright &copy; 2021-2025 Thomas Comonics Technology
-                        <br> All rights reserved.
-                    </p>
-                </footer>
-            </div>
+    <footer class="py-3 my-4">
+        <!-- NAVIGATION -->
+        <ul class="nav justify-content-center mb-3">
+            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="services.html" class="nav-link px-2 text-muted">Services</a></li>
+            <li class="nav-item"><a href="products.html" class="nav-link px-2 text-muted">Products</a></li>
+            <li class="nav-item"><a href="payment-methods.html" class="nav-link px-2 text-muted">Payment-Methods</a></li>
+            <li class="nav-item"><a href="faqs.html" class="nav-link px-2 text-muted">FAQs</a></li>
+            <li class="nav-item"><a href="about-us.html" class="nav-link px-2 text-muted">About-Us</a></li>
+        </ul>
+        <hr>
+        <center>
+            <img id="yt-logo-footer" src="images/tct-logo.png" alt="Yottasoft Technology" height="125">
+        </center>
+        <!-- @ 2022 Company Inc. -->
+        <p class="text-center text-muted">
+            Copyright &copy; 2021-2025 Thomas Comonics Technology
+            <br class="highlightNone"> All rights reserved.
+        </p>
     </footer>
 </html>
