--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 </ul>
       
                 <div class="text-end">
-                    <button type="button" class="btn btn-outline-light me-2">WhatsApp Inquiry</button>
+                    <a href="https://wa.me/message/UVRGLS5ZUFK6H1">
+                        <button type="button" class="btn btn-outline-light me-2">WhatsApp Inquiry</button>
+                    </a>
                     <button type="button" class="btn btn-warning">Share Now</button>
                 </div>
             </div>
@@ -80,7 +82,7 @@
                     <div class="card-body text-center">
                         <img src="images/tct-logo-bg.png" alt="Windows 11" height="100px">
                         <br class="highlightNone">
-                        <p>J&T Express</p>
+                        <p style="padding-top: 15px;">J&T Express</p>
                         <br class="highlightNone">
                         <a href="products.html" type="button" class="w-100 btn btn-lg btn-outline-success">Shop now</a>
                     </div>
@@ -96,7 +98,7 @@
                     <div class="card-body text-center">
                         <img src="images/shopee-logo.png" alt="Windows 11" height="100px">
                         <br class="highlightNone">
-                        <p>SPX Express</p>
+                        <p style="padding-top: 15px;">SPX Express</p>
                         <br class="highlightNone">
                         <a href="https://shopee.com.my/tct_penang" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Navigate now</a>
                     </div>
