--- a/payment-methods.html
+++ b/payment-methods.html
@@ -38,7 +38,9 @@
                 </ul>
            
                 <div class="text-end">
-                    <button type="button" class="btn btn-outline-light me-2">WhatsApp Inquiry</button>
+                    <a href="https://wa.me/message/UVRGLS5ZUFK6H1">
+                        <button type="button" class="btn btn-outline-light me-2">WhatsApp Inquiry</button>
+                    </a>
                     <button type="button" class="btn btn-warning">Share Now</button>
                 </div>
             </div>
