--- a/about-us.html
+++ b/about-us.html
@@ -110,8 +110,8 @@
                 <br class="highlightNone">
 
                 <!-- Shopee -->
-                 <a href="https://shopee.com.my/tct_penang" target="_blank" style="text-decoration: none;">
-                    <div class="eCommercePlatform">
+                <div class="eCommercePlatform">
+                    <a href="https://shopee.com.my/tct_penang" target="_blank" style="text-decoration: none;">
                         <table>
                             <tr>
                                 <td style="padding-right: 28px;">
@@ -139,19 +139,25 @@
                                                 <td>:</td>
                                                 <td>3.7k</td>
                                             </tr>
+                                            <tr>
+                                                <td>e-Shop Link</td>
+                                                <td>:</td>
+                                                <td>shopee.com.my/tct_penang</td>
+                                            </tr>                                               
                                         </table>
                                     </h5>
                                 </td>
                             </tr>
                         </table>
-                    </div>
-                 </a>
+                    </a>
+                </div>
+
                 
                 <br class="highlightNone">
 
                 <!-- Lazada -->
-                <a href="https://www.lazada.com.my/shop/tct-penang" target="_blank" style="text-decoration: none;">
-                    <div class="eCommercePlatform">
+                <div class="eCommercePlatform">
+                    <a href="https://www.lazada.com.my/shop/tct-penang" target="_blank" style="text-decoration: none;">
                         <table>
                             <tr>
                                 <td style="padding-right: 28px;">
@@ -169,18 +175,28 @@
                                                 <td width="40px">:</td>
                                                 <td>Thomas Comonics Technology (TCT)</td>
                                             </tr>
+                                            <tr style="color: white; user-select: none;">
+                                                <td></td>
+                                                <td></td>
+                                                <td>HENG ONG HUAT 1688</td>
+                                            </tr>                                               
                                             <tr>
                                                 <td>Followers</td>
                                                 <td>:</td>
                                                 <td>10</td>
                                             </tr>
+                                            <tr>
+                                                <td>e-Shop Link</td>
+                                                <td>:</td>
+                                                <td>lazada.com.my/shop/tct-penang</td>
+                                            </tr>    
                                         </table>
                                     </h5>
                                 </td>
                             </tr>
                         </table>
-                    </div>         
-                </a>
+                    </a>
+                </div>         
             </center>
         </div>
     </div>
