--- a/index.html
+++ b/index.html
@@ -77,19 +77,6 @@
 
         <hr>
 
-        <div>
-            <center>
-                <h1 class="display-6 fw-normal">
-                    Expertly Sourced Components, Perfectly Tailored to Your Needs
-                </h1>
-                <p class="fs-5 text-muted">Request a Quote Anytime
-                    <br> Our Team is On Standby, Prepared to Serve You.</p>
-            </center>
-        </div>
-        <br class="highlightNone">
-
-        <hr>
-
         <!-- BRAND -->
         <div>
             <center>
@@ -145,8 +132,31 @@
         </div>
         <br class="highlightNone">
 
-    
+        <hr>
+
+        <div>
+            <center>
+                <h1 class="display-6 fw-normal">
+                    Expertly Sourced Components, Perfectly Tailored to Your Needs
+                </h1>
+                <p class="fs-5 text-muted">Request a Quote Anytime
+                    <br> Our Team is On Standby, Prepared to Serve You.</p>
+            </center>
+        </div>
         <br class="highlightNone">
+        
+        <hr>
+
+        <div>
+            <center>
+                <h1 class="display-6 fw-normal">
+                    Rare Products? No Problem!
+                </h1>
+                <p class="fs-5 text-muted">Let us help you find those hard-to-get items to you.</p>
+            </center>
+        </div>
+        <br class="highlightNone">
+
         <hr>
 
         <!-- DELIVERY & COURIER SERVICES -->
