--- a/about-us.html
+++ b/about-us.html
@@ -60,28 +60,28 @@
 
                 <br class="highlightNone">
 
-                <img src="images/tct-full-logo-blue.png" 
-                    id="tct-full-logo" 
-                    alt="Thomas Cheapsoft Technology" 
-                    style="margin-bottom: 18px;">
-                <h3 class="fs-5 highlightNone"
-                    style="color: #d9a21b;">
-                    Speedy | Reliable | Affordable 
-                </h3>
+                <div style="border: 5px solid #d9a21b; padding: 15px 70px; border-radius: 28px; width: auto; display: inline-block; text-align: center;">
+                    <img src="images/tct-full-logo-blue.png" 
+                        id="tct-full-logo" 
+                        alt="Thomas Cheapsoft Technology"
+                        style="margin-bottom: 18px;">
+                    <h3 class="fs-5 highlightNone"
+                        style="color: #d9a21b;">
+                        Speedy | Reliable | Affordable 
+                    </h3>
+                </div>
 
-                <br class="highlightNone">
-                
-                <div class="businessInformation">
+                <div class="businessInformation" style="margin-top: 28px;">
                     <h3 class="fs-5 text-muted">
                         <table>
                             <tr>
-                                <td>Business Name</td>
-                                <td>:</td>
+                                <td class="highlightNone">Business Name</td>
+                                <td class="highlightNone">:</td>
                                 <td>THOMAS COMONICS TECHNOLOGY</td>
                             </tr>
                             <tr>
-                                <td style="padding-right: 8px;">Registration Number</td>
-                                <td width="40px">:</td>
+                                <td class="highlightNone" style="padding-right: 8px;">Registration Number</td>
+                                <td class="highlightNone" width="40px">:</td>
                                 <td>202403278951 (003660184-W)</td>
                             </tr>
                         </table>
@@ -115,7 +115,7 @@
                         <table>
                             <tr>
                                 <td style="padding-right: 28px;">
-                                    <img src="images/shopee-logo.png" 
+                                    <img src="images/shopee-logo.png"
                                         alt="Shopee Malaysia"
                                         title="Shopee Malaysia"
                                         height="100px"
@@ -125,23 +125,23 @@
                                     <h5 class="fs-6 text-muted">
                                         <table>
                                             <tr>
-                                                <td style="padding-right: 8px;">Shop Name</td>
-                                                <td width="40px">:</td>
-                                                <td>Thomas Comonics Technology (TCT)</td>
+                                                <td class="highlightNone" style="padding-right: 8px;">Shop Name</td>
+                                                <td class="highlightNone" width="40px">:</td>
+                                                <td class="highlightNone">Thomas Comonics Technology (TCT)</td>
                                             </tr>
                                             <tr>
-                                                <td>Username</td>
-                                                <td>:</td>
+                                                <td class="highlightNone">Username</td>
+                                                <td class="highlightNone">:</td>
                                                 <td>tct_penang</td>
                                             </tr>
                                             <tr>
-                                                <td>Followers</td>
-                                                <td>:</td>
-                                                <td>3.7k</td>
+                                                <td class="highlightNone">Followers</td>
+                                                <td class="highlightNone">:</td>
+                                                <td class="highlightNone">3.7k</td>
                                             </tr>
                                             <tr>
-                                                <td>e-Shop Link</td>
-                                                <td>:</td>
+                                                <td class="highlightNone">e-Shop Link</td>
+                                                <td class="highlightNone">:</td>
                                                 <td>shopee.com.my/tct_penang</td>
                                             </tr>                                               
                                         </table>
@@ -161,7 +161,7 @@
                         <table>
                             <tr>
                                 <td style="padding-right: 28px;">
-                                    <img src="images/lazada-logo.png" 
+                                    <img src="images/lazada-logo.png"
                                         alt="Shopee Malaysia"
                                         title="Shopee Malaysia"
                                         height="100px"
@@ -171,9 +171,9 @@
                                     <h5 class="fs-6 text-muted">
                                         <table>
                                             <tr>
-                                                <td style="padding-right: 8px;">Store Name</td>
-                                                <td width="40px">:</td>
-                                                <td>Thomas Comonics Technology (TCT)</td>
+                                                <td class="highlightNone" style="padding-right: 8px;">Store Name</td>
+                                                <td class="highlightNone" width="40px">:</td>
+                                                <td class="highlightNone">Thomas Comonics Technology (TCT)</td>
                                             </tr>
                                             <tr style="color: white; user-select: none;">
                                                 <td></td>
@@ -181,13 +181,13 @@
                                                 <td>HENG ONG HUAT 1688</td>
                                             </tr>                                               
                                             <tr>
-                                                <td>Followers</td>
-                                                <td>:</td>
-                                                <td>10</td>
+                                                <td class="highlightNone">Followers</td>
+                                                <td class="highlightNone">:</td>
+                                                <td class="highlightNone">10</td>
                                             </tr>
                                             <tr>
-                                                <td>e-Shop Link</td>
-                                                <td>:</td>
+                                                <td class="highlightNone">e-Shop Link</td>
+                                                <td class="highlightNone">:</td>
                                                 <td>lazada.com.my/shop/tct-penang</td>
                                             </tr>    
                                         </table>
