--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
         <!-- INTRO -->
         <div>
             <center>
-                <h1 class="display-6 fw-normal">
+                <div style="border: 5px solid #d9a21b; padding: 17px 48px; border-radius: 28px; width: auto; display: inline-block; text-align: center;">
+                    <img src="images/tct-full-logo-blue.png" 
+                         alt="Thomas Comonics Technology" 
+                         width="388px">
+                         <!-- now 139 heght -->
+                </div>
+                               
+                <h1 class="display-6 fw-normal" style="padding-top: 15px;">
                     Your One-Stop Solution for
                     <h1 style="font-weight: bolder;">Industrial Machinery Automation Parts</h1>
                 </h1>
@@ -98,8 +105,6 @@
                 <div>
                     <img src="images/chint-logo.png" alt="Chint" title="Chint">
                 </div>                 
-
-
                 <div>
                     <img src="images/xinje-logo.png" alt="Xinje" title="Xinje">
                 </div>
